--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "gotloader",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "keywords": ["discordjs", "command handler", "discord", "commands"],
   "author": "gotitim",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^13.3.1"
   },
+  "files": [
+    "typings",
+    "src"
+  ],
   "types": "./typings/index.d.ts"
 }
