--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "typings",
     "src"
   ],
-  "types": "./typings/index.d.ts"
+  "types": "./typings/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/goteusz-maszyk/GotLoader.git"
+  }
 }
